--- a/10 - While/Extra - While.ipynb
+++ b/10 - While/Extra - While.ipynb
@@ -282,13 +282,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3d91e30f-f1e5-4ece-bd92-6d886b9ff9ae",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite o primeiro número: \n",
+      "11\n",
+      "\n",
+      "Digite o segundo número: \n",
+      "12\n",
+      "\n",
+      "Digite o primeiro número: \n",
+      "11\n",
+      "\n",
+      "Digite o segundo número: \n",
+      "12\n",
+      "\n",
+      "Digite o primeiro número: \n",
+      "13\n",
+      "\n",
+      "Digite o segundo número: \n",
+      "11\n",
+      "\n",
+      "14\n"
+     ]
+    }
+   ],
    "source": [
+    "n1 = 0 \n",
+    "n2 = 0\n",
+    "\n",
+    "while n1<=n2:\n",
+    "\n",
+    "    print(\"Digite o primeiro número: \")\n",
+    "    n1 = int(input(\"\"))\n",
+    "    soma = n1 + 1\n",
+    "    print(n1)\n",
+    "    n1 += 1\n",
+    "    print()\n",
+    "\n",
+    "    print(\"Digite o segundo número: \")\n",
+    "    n2 = int(input(\"\"))\n",
+    "    print(n2)\n",
+    "    print()\n",
+    "\n",
+    "print(n1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
