--- a/11 - Funções/Extra - Funções.ipynb
+++ b/11 - Funções/Extra - Funções.ipynb
@@ -31,12 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5a6d183b-b7bd-4d42-9f5a-f3a8d1937b24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Os números digitados foram 1234567890. a inversão deles é 0987654321\n"
+     ]
+    }
+   ],
    "source": [
+    "numeros = input(\"Digite 10 números: \")\n",
     "\n",
+    "def inversao(numeros):\n",
+    "\n",
+    "    inverso = numeros[::-1]\n",
+    "\n",
+    "    return f'Os números digitados foram {numeros}. a inversão deles é {inverso}'\n",
+    "\n",
+    "print (inversao(numeros))\n",
     "\n"
    ]
   },
@@ -66,11 +82,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "db7a688a-0562-40fd-9315-10ca15bf3b5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hoje é dia 10 de Dezembro de 1999\n"
+     ]
+    }
+   ],
    "source": [
+    "n1 = input(\"Digite o dia: \")\n",
+    "n2 = input(\"Digite mes: \")\n",
+    "n3 = input(\"Digite o ano: \")\n",
+    "\n",
+    "def data(n1,n2,n3):\n",
+    "    meses = ['Janeiro', 'Fevereiro', 'Março','Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro']\n",
+    "\n",
+    "    if n2 == \"1\" or  n2 == \"01\":\n",
+    "        return f'Hoje é dia {n1} de {meses[0]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"2\" or n2 == \"02\":\n",
+    "        return f'Hoje é dia {n1} de {meses[1]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"3\" or n2 == \"03\":\n",
+    "        return f'Hoje é dia {n1} de {meses[2]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"4\" or n2 == \"04\":\n",
+    "        return f'Hoje é dia {n1} de {meses[3]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"5\" or n2 == \"05\":\n",
+    "        return f'Hoje é dia {n1} de {meses[4]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"6\" or n2 == \"06\":\n",
+    "        return f'Hoje é dia {n1} de {meses[5]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"7\" or n2 == \"07\":\n",
+    "        return f'Hoje é dia {n1} de {meses[6]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"8\" or n2 == \"08\":\n",
+    "        return f'Hoje é dia {n1} de {meses[7]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"9\" or n2 == \"09\":\n",
+    "        return f'Hoje é dia {n1} de {meses[8]} de {n3}'\n",
+    "   \n",
+    "    elif n2 == \"10\":\n",
+    "        return f'Hoje é dia {n1} de {meses[9]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"11\":\n",
+    "        return f'Hoje é dia {n1} de {meses[10]} de {n3}'\n",
+    "    \n",
+    "    elif n2 == \"12\":\n",
+    "        return f'Hoje é dia {n1} de {meses[11]} de {n3}'\n",
+    "    \n",
+    "    else:\n",
+    "\n",
+    "        return 'Data inválida.'\n",
+    "    \n",
+    "print(data(n1,n2,n3))\n",
     "\n",
     "\n"
    ]
@@ -101,13 +173,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "dcb7b150-ae6b-4314-910c-8e9b3708adcb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O maior número da lista é: 80\n",
+      "O menor número da lista é: 10\n",
+      "A média dos números é: 38.333333333333336\n",
+      "        \n"
+     ]
+    }
+   ],
    "source": [
+    "def operacao():\n",
+    "\n",
+    "    numeros = []\n",
+    "\n",
+    "    while len(numeros) < 6:\n",
+    "        \n",
+    "        entrada = int(input(\"Digite um numero: \"))\n",
+    "\n",
+    "        numeros.append(entrada)\n",
+    "        numeros.sort()\n",
+    "\n",
+    "    media = sum(numeros)/len(numeros)\n",
+    "    maior = numeros[-1]\n",
+    "    menor = numeros[0]\n",
+    "\n",
+    "    return f'''O maior número da lista é: {maior}\n",
+    "O menor número da lista é: {menor}\n",
+    "A média dos números é: {media}\n",
+    "        '''\n",
+    "\n",
+    "print(operacao())\n",
     "\n",
     "\n",
     "\n"
@@ -136,14 +240,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7ec4c171-01dc-45fd-9ebb-7d8c03c00f24",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O ano de 1601 não é bisexto.\n"
+     ]
+    }
+   ],
    "source": [
+    "ano = int(input(\"Digite um ano e descubra se ele é bisexto: \"))\n",
     "\n",
+    "def tipo_ano(ano):\n",
+    "\n",
+    "    if ano%4 == 0 and ano/100>=1 or ano % 400 == 0: \n",
+    "\n",
+    "        return f'O ano de {ano} é bisexto.'\n",
+    "    else:\n",
+    "\n",
+    "        return f'O ano de {ano} não é bisexto.'\n",
+    "    \n",
+    "print(tipo_ano(ano))\n",
     "\n",
     "\n"
    ]
@@ -174,14 +297,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b1e26655-9d38-49c7-bdf4-7df6d5dffe58",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número digitado tem 4 digitos.\n"
+     ]
+    }
+   ],
    "source": [
+    "numero = input(\"Digite um numero qualquer: \")\n",
     "\n",
+    "def contagem(numero):\n",
+    "\n",
+    "    resultado = len(numero)\n",
+    "\n",
+    "    return f\"O número digitado tem {resultado} digitos.\"\n",
+    "\n",
+    "print(contagem(numero))\n",
     "\n"
    ]
   },
@@ -205,15 +344,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ce46f145-583e-468b-b965-343cc8aec987",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O texto 2 é maior que o texto 1\n"
+     ]
+    }
+   ],
    "source": [
+    "texto1 = input(\"Digite o primeiro texto: \")\n",
+    "texto2 = input(\"Digite o segundo texto: \")\n",
     "\n",
+    "def contagem(texto1,texto2):\n",
     "\n",
+    "    if len(texto1) > len(texto2):\n",
+    "        return 'O texto 1 é maior que o texto 2'\n",
+    "    \n",
+    "    elif len(texto1) < len(texto2):\n",
+    "        return 'O texto 2 é maior que o texto 1'\n",
+    "    else:\n",
+    "        return 'Ambos os textos possuem o mesmo tamanho.'\n",
+    "    \n",
+    "print(contagem(texto1,texto2))\n",
     "\n"
    ]
   },
@@ -471,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
