--- a/11 - Funções/Extra - Funções.ipynb
+++ b/11 - Funções/Extra - Funções.ipynb
@@ -400,14 +400,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e98f6f71-8311-4472-aacf-536efb923964",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número inválido.\n"
+     ]
+    }
+   ],
    "source": [
+    "celular = input(\"Digite seu celuar: \")\n",
+    "def verificacao(celular):\n",
     "\n",
+    "    if celular.startswith(\"9\") and len(celular) == 9 and celular.isalnum():\n",
+    "        return f'O celular {celular} é um número válido.'\n",
+    "    else:\n",
+    "        return 'Número inválido.'\n",
+    "print(verificacao(celular))\n",
     "\n",
     "\n"
    ]
@@ -436,15 +451,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b79a8531-1a0d-4349-95a3-82ddb3092336",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "    \n",
+      "SALÁRIO BRUTO = R$ 3500.0\n",
+      "___________________________\n",
+      "\n",
+      "      DESCONTOS\n",
+      "\n",
+      "VALE TRANSPORTE =  R$ 210.0\n",
+      "INSS =  R$ 280.0\n",
+      "ADIANTAMENTO =  R$ 1050.0\n",
+      "____________________________\n",
+      "\n",
+      "TOTAL = R$ 1960.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "bruto = float(input(\"Qual o seu salario bruto: \"))\n",
     "\n",
+    "def liquido(bruto):\n",
+    "    \n",
+    "    vt = bruto*0.06\n",
+    "    inss = bruto*0.08\n",
+    "    adiantamento = bruto*0.3\n",
     "\n",
+    "    total = bruto - vt - inss - adiantamento\n",
+    "\n",
+    "    return f''' \n",
+    "\n",
+    "SALÁRIO BRUTO = R$ {bruto}\n",
+    "___________________________\n",
+    "\n",
+    "      DESCONTOS\n",
+    "\n",
+    "VALE TRANSPORTE =  R$ {vt}\n",
+    "INSS =  R$ {inss}\n",
+    "ADIANTAMENTO =  R$ {adiantamento}\n",
+    "____________________________\n",
+    "\n",
+    "TOTAL = R$ {total}\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "print(liquido(bruto))\n",
     "\n"
    ]
   },
@@ -474,15 +536,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "16226cda-092e-4a98-9db2-12ddf73e61e2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MÊS INVÁLIDO.\n"
+     ]
+    }
+   ],
    "source": [
+    "mes = input(\"Digite o nome por extenso de um mês: \")\n",
+    "meses = ['janeiro', 'fevereiro', 'março','abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro']\n",
     "\n",
+    "def abreviacao(mes):\n",
+    "    \n",
+    "    if mes in meses:\n",
+    "        \n",
+    "        return f\" O mês escolhido foi {mes}. Sua abreviação é {mes[0:3]}.\"\n",
+    "    \n",
+    "    else:\n",
     "\n",
+    "        return 'Mês inválido.'\n",
+    "\n",
+    "print(abreviacao(mes).upper())\n",
     "\n"
    ]
   },
@@ -512,15 +594,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "2cb2ada5-1324-4150-98c0-64e2d2382bec",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A lista criada foi: ['aaa', 'aaa', 'aaa']. Ela tem o total de 9 caracteres.\n"
+     ]
+    }
+   ],
    "source": [
+    "lista = []\n",
     "\n",
+    "def contagem():\n",
+    "    while len(lista) < 3:\n",
+    "        itens = input(\"Digite um item aleatório: \")\n",
+    "        lista.append(itens)\n",
     "\n",
+    "    total_caracteres = sum(len(item) for item in lista)\n",
+    "    \n",
+    "    return f'A lista criada foi: {lista}. Ela tem o total de {total_caracteres} caracteres.'\n",
+    "\n",
+    "print(contagem())\n",
     "\n"
    ]
   },
@@ -546,13 +646,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "1fd7363a-2008-42c3-a691-3d79db77b951",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "' \n",
+      "        Preço do alcool: R$ 3.64\n",
+      "        Preço do gasolina: R$ 5.63\n",
+      "        Diferença: 0.65\n",
+      "        _______________________________\n",
+      "\n",
+      "        RESULTADO: O ALCOOL ESTÁ VALENDO MAIS A PENA\n",
+      "        \n"
+     ]
+    }
+   ],
    "source": [
+    "alcool = float(input('Qual o preço atual do etanol: '))\n",
+    "gasolina = float(input('Qual o preço atual da gasolina: '))\n",
     "\n",
+    "def valor (alcool,gasolina):\n",
     "\n",
+    "    diferenca = alcool/gasolina\n",
+    "    \n",
+    "    if diferenca <= 0.7:\n",
+    "        return f'''' \n",
+    "        Preço do alcool: R$ {alcool:.2f}\n",
+    "        Preço do gasolina: R$ {gasolina:.2f}\n",
+    "        Diferença: {diferenca:.2f}\n",
+    "        _______________________________\n",
+    "\n",
+    "        RESULTADO: O ALCOOL ESTÁ VALENDO MAIS A PENA\n",
+    "        '''''\n",
+    "    \n",
+    "    else:\n",
+    "                return f'''' \n",
+    "        Preço do alcool: R$ {alcool:.2f}\n",
+    "        Preço do gasolina: R$ {gasolina:.2f}\n",
+    "        Diferença: {diferenca:.2f}\n",
+    "        _______________________________\n",
+    "\n",
+    "        RESULTADO: A GASOLINA ESTÁ VALENDO MAIS A PENA\n",
+    "        '''''\n",
+    "print(valor(alcool,gasolina))\n",
     "\n"
    ]
   },
@@ -595,12 +735,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "885d5feb-2bbd-4b75-a015-3c02d6b5f643",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brigadeiro adicionado ao carrinho\n",
+      "\n",
+      "Brigadeiro Branco adicionado ao carrinho\n",
+      "\n",
+      "Beijinho adicionado ao carrinho\n",
+      "\n",
+      "Casadinho adicionado ao carrinho\n",
+      "\n",
+      "Napolitano adicionado ao carrinho\n",
+      "\n",
+      "Opção inválida. Por favor escolha uma das opções do menu!\n",
+      "\n",
+      "Fechando a compra...\n",
+      "\n",
+      "O total da compra foi de R$ 170.\n"
+     ]
+    }
+   ],
    "source": [
+    "total = 0\n",
     "\n",
+    "def contas(total):\n",
+    "\n",
+    "    while True:\n",
+    "\n",
+    "        menu = int(input(\"\"\"\n",
+    "        QUAL DOCE VOCÊ QUER ADICIONAR AO CARRINHO:\n",
+    "        1- BRIGADEIRO = R$ 32.00\n",
+    "        2- BRIGADEIRO  BRANCO = R$ 33.00\n",
+    "        3- BEIJINHO = R$ 35.00\n",
+    "        4- CASADINHO = R$ 34.00\n",
+    "        5- NAPOLITANO = R$ 36.00\n",
+    "        0-FINALIZAR COMPRA\n",
+    "        \"\"\"))\n",
+    "\n",
+    "        if menu == 1:\n",
+    "            total+= 32\n",
+    "            print(\"Brigadeiro adicionado ao carrinho\")\n",
+    "            print()\n",
+    "\n",
+    "        elif menu == 2:\n",
+    "            total+= 33\n",
+    "            print(\"Brigadeiro Branco adicionado ao carrinho\")\n",
+    "            print()\n",
+    "\n",
+    "        elif menu == 3:\n",
+    "            total+= 35\n",
+    "            print(\"Beijinho adicionado ao carrinho\")\n",
+    "            print()\n",
+    "\n",
+    "        elif menu == 4:\n",
+    "            total+= 34\n",
+    "            print(\"Casadinho adicionado ao carrinho\")\n",
+    "            print()\n",
+    "        \n",
+    "        elif menu == 5:\n",
+    "            total+= 36\n",
+    "            print(\"Napolitano adicionado ao carrinho\")\n",
+    "            print()\n",
+    "        \n",
+    "        elif menu == 0:\n",
+    "            print(\"Fechando a compra...\")\n",
+    "            print()\n",
+    "            break\n",
+    "        \n",
+    "\n",
+    "        else:\n",
+    "            print(\"Opção inválida. Por favor escolha uma das opções do menu!\")\n",
+    "            print()\n",
+    "            \n",
+    "    return total\n",
+    "\n",
+    "print(f\"O total da compra foi de R$ {contas(total)}.\")\n",
     "\n",
     "\n"
    ]
