--- a/11 - Funções/Extra - Funções.ipynb
+++ b/11 - Funções/Extra - Funções.ipynb
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "885d5feb-2bbd-4b75-a015-3c02d6b5f643",
    "metadata": {},
    "outputs": [
@@ -753,11 +753,13 @@
       "\n",
       "Napolitano adicionado ao carrinho\n",
       "\n",
+      "Napolitano adicionado ao carrinho\n",
+      "\n",
       "Opção inválida. Por favor escolha uma das opções do menu!\n",
       "\n",
       "Fechando a compra...\n",
       "\n",
-      "O total da compra foi de R$ 170.\n"
+      "O total da compra foi de R$ 206.\n"
      ]
     }
    ],
