--- a/10 - While/Extra - While.ipynb
+++ b/10 - While/Extra - While.ipynb
@@ -379,14 +379,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1ebed1d4-1e67-4e1b-a51f-cb0875bbab26",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subtotal R$15.00\n",
+      "\n",
+      "Subtotal R$45.00\n",
+      "\n",
+      "Subtotal R$75.00\n",
+      "\n",
+      "Subtotal R$135.00\n",
+      "\n",
+      "Subtotal R$150.00\n",
+      "\n",
+      "Subtotal R$210.00\n",
+      "\n",
+      "Fechando a conta..\n",
+      "\n",
+      "O total foi: R$ 210.00.\n"
+     ]
+    }
+   ],
    "source": [
+    "total = 0\n",
     "\n",
+    "while True:\n",
+    "\n",
+    "    menu = int(input(\"\"\"\n",
+    "        QUANTO VOCÊ GASTOU:\n",
+    "        1-R$ 15.00\n",
+    "        2-R$ 30.00\n",
+    "        3-R$ 45.00\n",
+    "        4-R$ 60.00\n",
+    "        0-FINALIZAR CONTA\n",
+    "        \"\"\"))\n",
+    "\n",
+    "    if menu == 1:\n",
+    "            total+= 15\n",
+    "            print(f\"Subtotal R${total:.2f}\")\n",
+    "            print()\n",
+    "\n",
+    "    elif menu == 2:\n",
+    "            total+= 30\n",
+    "            print(f\"Subtotal R${total:.2f}\")\n",
+    "            print()\n",
+    "\n",
+    "    elif menu == 3:\n",
+    "            total+= 45\n",
+    "            print(f\"Subtotal R${total:.2f}\")\n",
+    "            print()\n",
+    "\n",
+    "    elif menu == 4:\n",
+    "            total+= 60\n",
+    "            print(f\"Subtotal R${total:.2f}\")\n",
+    "            print()\n",
+    "        \n",
+    "    elif menu == 0:\n",
+    "            print(\"Fechando a conta..\")\n",
+    "            print()\n",
+    "            break\n",
+    "        \n",
+    "\n",
+    "    else:\n",
+    "            print(\"Opção inválida. Por favor escolha uma das opções do menu!\")\n",
+    "            print()\n",
+    "print(f'O total foi: R$ {total:.2f}.')\n",
     "\n"
    ]
   },
@@ -423,14 +487,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "74bf7ad0-79cd-40db-b327-b617162c6346",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acesso liberado\n"
+     ]
+    }
+   ],
    "source": [
+    "contagem = 0\n",
     "\n",
+    "while True:\n",
+    "    senha = input(\"Digite sua senha: \")\n",
+    "\n",
+    "    if senha == \"123456\" and contagem < 2:\n",
+    "        print(\"Acesso liberado\")\n",
+    "        break\n",
+    "\n",
+    "    elif senha != \"123456\" and contagem <2:\n",
+    "        print('Senha incorreta.')\n",
+    "        contagem +=1\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Conta bloqueada!\")\n",
+    "        break\n",
     "\n"
    ]
   },
@@ -464,15 +551,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "ab638704-ed4f-41eb-a049-89326b058c49",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aluno cadastrado com sucesso!\n",
+      "Aluno cadastrado com sucesso!\n",
+      "Aluno cadastrado com sucesso!\n",
+      "Aluno cadastrado com sucesso!\n",
+      "['Laura', 'Luiz', 'Rafa', 'Thiago']\n"
+     ]
+    }
+   ],
    "source": [
+    "alunos = []\n",
     "\n",
-    "\n"
+    "while True:\n",
+    "    \n",
+    "    menu= input(\"\"\"\n",
+    "\n",
+    "        Deseja cadastra aluno? \n",
+    "        1-SIM \n",
+    "        2-NãO\n",
+    "\n",
+    "        \"\"\")\n",
+    "\n",
+    "    if menu == \"1\":\n",
+    "\n",
+    "     aluno = input(\"Digite seu nome: \").title()\n",
+    "\n",
+    "     alunos.append(aluno)\n",
+    "     alunos.sort()\n",
+    "\n",
+    "     print(\"Aluno cadastrado com sucesso!\")\n",
+    "\n",
+    "    elif menu == \"2\":\n",
+    "        break\n",
+    "    \n",
+    "\n",
+    "print(alunos)\n"
    ]
   },
   {
