--- a/10 - While/Extra - While.ipynb
+++ b/10 - While/Extra - While.ipynb
@@ -644,13 +644,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d63abd13-0356-4bc7-a9e5-0a276ff73a31",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você votou no José\n",
+      "Você votou no José\n",
+      "Você votou na Maria\n",
+      "Você votou na Maria\n",
+      "Você votou em branco\n",
+      "Você votou em branco\n",
+      "Você votou em branco\n",
+      "Você votou nulo\n",
+      "VOTAÇÕES ENCERRADAS\n",
+      "\n",
+      "\n",
+      "José = 2\n",
+      "Maria = 2\n",
+      "branco = 3\n",
+      "nulo = 1\n",
+      "_____________________\n",
+      "\n",
+      "NÃO HOUVERAM VENCEDORES!\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
+    "candidato1 = 0\n",
+    "candidato2 = 0\n",
+    "branco = 0\n",
+    "nulo = 0\n",
+    "\n",
+    "while True:\n",
+    "    voto = int(input('''\n",
+    "    ESCOLHA UMA DAS OPÇÕES\n",
+    "    1-José\n",
+    "    2-Maria\n",
+    "    3-Branco\n",
+    "    4-Nulo\n",
+    "    0-ENCERRAR VOTAÇÃO\n",
+    "    '''))\n",
+    "\n",
+    "    if voto == 1:\n",
+    "        print('Você votou no José')\n",
+    "        \n",
+    "        candidato1 += 1\n",
+    "\n",
+    "    elif voto == 2:\n",
+    "        print('Você votou na Maria')\n",
+    "        \n",
+    "        candidato2 += 1\n",
+    "\n",
+    "    elif voto == 3:\n",
+    "        print('Você votou em branco')\n",
+    "        \n",
+    "        branco += 1\n",
+    "\n",
+    "    elif voto == 4:\n",
+    "        print('Você votou nulo')\n",
+    "        print()\n",
+    "        \n",
+    "        nulo += 1\n",
+    "    \n",
+    "    elif voto == 0:\n",
+    "        print('VOTAÇÕES ENCERRADAS')\n",
+    "        print()\n",
+    "\n",
+    "        break\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Opção inválida. Escolha umas das opções do menu\")\n",
+    "\n",
+    "if candidato1 >candidato2 and candidato1 >branco and candidato1 > nulo:\n",
+    "\n",
+    "    print(f'''\n",
+    "José = {candidato1}\n",
+    "Maria = {candidato2}\n",
+    "branco = {branco}\n",
+    "nulo = {nulo}\n",
+    "_____________________\n",
+    "\n",
+    "O VENCEDOR É O JOSÉ!\n",
+    " ''')\n",
+    "\n",
+    "elif candidato2 >candidato1 and candidato2 >branco and candidato2 > nulo:\n",
+    "\n",
+    "    print(f'''\n",
+    "José = {candidato1}\n",
+    "Maria = {candidato2}\n",
+    "branco = {branco}\n",
+    "nulo = {nulo}\n",
+    "_____________________\n",
+    "\n",
+    "A VENCEDORA É A MARIA!\n",
+    " ''')\n",
+    "\n",
+    "else:\n",
+    "\n",
+    "    print(f'''\n",
+    "José = {candidato1}\n",
+    "Maria = {candidato2}\n",
+    "branco = {branco}\n",
+    "nulo = {nulo}\n",
+    "_____________________\n",
+    "\n",
+    "NÃO HOUVERAM VENCEDORES!\n",
+    " ''')\n",
     "\n",
     "\n"
    ]
@@ -681,14 +787,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bbbfbfb9-8866-4991-83ed-3d88ff0a8b63",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['casa', 'bola', 'mangueira', 'uva', 'quiabo', 'computador', 'cobra', 'lentilha', 'arroz']\n"
+     ]
+    }
+   ],
    "source": [
     "palavras = ['casa','bola','mangueira','uva','quiabo','computador','cobra','lentilha','arroz']\n",
+    "\n",
+    "while True:\n",
+    "\n",
+    "    palavra = input(\"Digite uma palavra: \")\n",
+    "\n",
+    "    if palavra in palavras:\n",
+    "        break\n",
+    "\n",
+    "    else:\n",
+    "        palavras.append(palavra)\n",
+    "        \n",
+    "print(palavras)\n",
     "\n"
    ]
   },
@@ -733,7 +859,10 @@
    },
    "outputs": [],
    "source": [
+    "soma = 0\n",
     "\n",
+    "while True:\n",
+    "    \n",
     "\n"
    ]
   },
