--- a/15 - Manipulação de Arquivos/Exercícios/Exercício - Manipulação de Arquivos.ipynb
+++ b/15 - Manipulação de Arquivos/Exercícios/Exercício - Manipulação de Arquivos.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d50e46fc-9af0-4755-8b43-1ff1fba30b90",
    "metadata": {},
    "source": [
-    "# <font color='OrangeRed'><center>Exercícios - Manipulação de Arquivos</center></font>"
+    "# <font color='Orange'><center>Exercícios - Manipulação de Arquivos</center></font>"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "e8d8f755-55c8-472f-9b47-1af76da222cf",
    "metadata": {},
    "outputs": [
@@ -34,9 +35,10 @@
    ],
    "source": [
     "arquivo = open('Exerc¡cio 01.txt', encoding = 'utf-8')\n",
-    "conteudo = arquivo.read()\n",
+    "\n",
+    "print(arquivo.read())\n",
+    "\n",
     "arquivo.close()\n",
-    "print(conteudo)\n",
     "\n"
    ]
   },
@@ -60,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "1cec7b95-a891-465d-8322-ecc583890fba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arquivo = open('Exercício 02.txt','w')\n",
+    "arquivo = open('Exercício 02.txt','w', encoding='utf-8')\n",
     "\n",
     "arquivo.write('Arquivo de texto cirado com Python')\n",
     "\n",
@@ -127,12 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "46966e8e-196a-43e7-8e33-537322902a46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arquivo = open('Exercício 04.txt','w')\n",
+    "arquivo = open('Exercício 04.txt','x', encoding='utf-8')\n",
     "\n",
     "arquivo.write('Arquivo de texto exclusivo!')\n",
     "\n",
@@ -174,8 +176,10 @@
    "source": [
     "arquivo = open('Pasta/Subpasta/Exerc¡cio 05.txt', encoding = 'utf-8')\n",
     "conteudo = arquivo.read()\n",
-    "arquivo.close()\n",
+    "\n",
     "print(conteudo)\n",
+    "\n",
+    "arquivo.close()\n",
     "\n"
    ]
   },
@@ -463,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "3790c367-a6ca-437a-8075-3254303c25f9",
    "metadata": {
     "tags": []
@@ -473,28 +477,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nome Idade\n",
-      "Fernando 5\n",
-      "Bruna 7\n",
-      "Natalia 10\n",
-      "Caio 12\n",
-      "Mariana 18\n",
-      "João 19\n",
-      "Pedro 15\n",
-      "Thamires 17\n"
+      "Nome - Idade\n",
+      "Fernando - 5\n",
+      "Bruna - 7\n",
+      "Natalia - 10\n",
+      "Caio - 12\n",
+      "Mariana - 18\n",
+      "João - 19\n",
+      "Pedro - 15\n",
+      "Thamires - 17\n"
      ]
     }
    ],
    "source": [
-    "arquivo = open('Exerc¡cio 11.csv',encoding='utf-8')\n",
     "\n",
-    "for linha in arquivo:\n",
+    "for linha in open('Exerc¡cio 11.csv',encoding='utf-8'):\n",
     "\n",
-    "   coluna=  linha.split(',')\n",
+    "   coluna = linha.split(',')\n",
     "\n",
-    "   print(coluna[0],coluna[1])\n",
+    "   print(coluna[0],'-',coluna[1])\n",
     "\n",
-    "arquivo.close()\n",
+    "\n",
     "\n",
     "    \n",
     "\n",
@@ -527,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "4c97c6d8-50aa-4572-89f1-9783134ec0c5",
    "metadata": {},
    "outputs": [
@@ -547,11 +550,14 @@
     }
    ],
    "source": [
-    "arquivo = open('Exerc¡cio 12.csv' , encoding='utf-8')\n",
     "\n",
-    "for linha in arquivo:\n",
+    "\n",
+    "for linha in open('Exerc¡cio 12.csv' , encoding='utf-8'):\n",
+    "\n",
     "    coluna = linha.split(',')\n",
+    "\n",
     "    print(coluna[0] + '-' + coluna[1])\n",
+    "\n",
     "\n"
    ]
   },
