--- a/16 - Bibliotecas/Bibliotecas do Python/Extra - Bibliotecas.ipynb
+++ b/16 - Bibliotecas/Bibliotecas do Python/Extra - Bibliotecas.ipynb
@@ -23,11 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "import datetime\n",
-    "import random\n",
-    "import locale\n",
-    "\n"
+    "import locale"
    ]
   },
   {
@@ -57,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "dia_trabalhador = 'No dia 01 de maio de 2000 foi o dia do trabalhor'\n",
     "natal = 'Não vejo a hora de chegar o dia 25 de dezembro de 2023 para comemorar o natal'\n",
     "independencia = 'Nós comemoramos a independência do Brasil no dia 07 de setembro de 2005'\n",
@@ -88,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "90503f10-63fc-480d-9d93-d4567c29f1b0",
    "metadata": {},
    "outputs": [
@@ -96,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 9, 4, 5, 2]\n"
+      "[6, 3, 1, 7, 10]\n"
      ]
     }
    ],
