--- a/16 - Bibliotecas/pandas_projetcs/panda_teste.ipynb
+++ b/16 - Bibliotecas/pandas_projetcs/panda_teste.ipynb
@@ -2231,13 +2231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "# excluindo a coluna de indice\n",
     "\n",
-    "planilha.to_excel('Nova planilha.xlsx', index=False)"
+    "planilha.to_excel('Nova planilha.xlsx', index=False)\n",
+    "planilha.to_csv('Nova planilha.csv', index=False)\n",
+    "planilha.to_html('Nova planilha.html', index=False)\n",
+    "planilha.to_json('Nova planilha.json')"
    ]
   }
  ],
