--- a/16 - Bibliotecas/pandas_projetcs/panda_teste.ipynb
+++ b/16 - Bibliotecas/pandas_projetcs/panda_teste.ipynb
@@ -2242,6 +2242,476 @@
     "planilha.to_html('Nova planilha.html', index=False)\n",
     "planilha.to_json('Nova planilha.json')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Cód', 'Nome', 'Cidade', 'Cidade/UF', 'Salário', 'Salário+10%',\n",
+       "       'Data_Nasc'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pegando todos os nomes das colunas\n",
+    "\n",
+    "planilha.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cód</th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Cidade/UF</th>\n",
+       "      <th>Salário</th>\n",
+       "      <th>Salário+10%</th>\n",
+       "      <th>Data_Nasc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Maria</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>1650.0</td>\n",
+       "      <td>1990-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>Votorantim</td>\n",
+       "      <td>Votorantim/SP</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>2750.0</td>\n",
+       "      <td>2000-02-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>João</td>\n",
+       "      <td>Piedade</td>\n",
+       "      <td>Piedade/SP</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3300.0</td>\n",
+       "      <td>2001-03-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>José</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>3850.0</td>\n",
+       "      <td>1976-04-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Bruno</td>\n",
+       "      <td>Piedade</td>\n",
+       "      <td>Piedade/SP</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>2001-08-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Vanessa</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>2090.0</td>\n",
+       "      <td>1996-05-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Marcos</td>\n",
+       "      <td>Votorantim</td>\n",
+       "      <td>Votorantim/SP</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>2970.0</td>\n",
+       "      <td>2002-11-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Miriam</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>2100</td>\n",
+       "      <td>2310.0</td>\n",
+       "      <td>1999-02-21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Cód     Nome      Cidade      Cidade/UF  Salário  Salário+10%  Data_Nasc\n",
+       "0    1    Maria    Sorocaba    Sorocaba/SP     1500       1650.0 1990-01-19\n",
+       "1    2    Pedro  Votorantim  Votorantim/SP     2500       2750.0 2000-02-29\n",
+       "2    3     João     Piedade     Piedade/SP     3000       3300.0 2001-03-07\n",
+       "3    4     José    Sorocaba    Sorocaba/SP     3500       3850.0 1976-04-15\n",
+       "4    5    Bruno     Piedade     Piedade/SP     1300       1430.0 2001-08-29\n",
+       "5    6  Vanessa    Sorocaba    Sorocaba/SP     1900       2090.0 1996-05-11\n",
+       "6    7   Marcos  Votorantim  Votorantim/SP     2700       2970.0 2002-11-24\n",
+       "7    8   Miriam    Sorocaba    Sorocaba/SP     2100       2310.0 1999-02-21"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#altrerando a ordem das colunas\n",
+    "\n",
+    "planilha = planilha[['Cód', 'Nome', 'Cidade','Cidade/UF', 'Salário','Salário+10%', 'Data_Nasc' ]]\n",
+    "\n",
+    "display(planilha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Código</th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Cidade/UF</th>\n",
+       "      <th>Salário</th>\n",
+       "      <th>Salário+10%</th>\n",
+       "      <th>Data_Nasc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Maria</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>1650.0</td>\n",
+       "      <td>1990-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>Votorantim</td>\n",
+       "      <td>Votorantim/SP</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>2750.0</td>\n",
+       "      <td>2000-02-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>João</td>\n",
+       "      <td>Piedade</td>\n",
+       "      <td>Piedade/SP</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3300.0</td>\n",
+       "      <td>2001-03-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>José</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>3850.0</td>\n",
+       "      <td>1976-04-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Bruno</td>\n",
+       "      <td>Piedade</td>\n",
+       "      <td>Piedade/SP</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>2001-08-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Vanessa</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>2090.0</td>\n",
+       "      <td>1996-05-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Marcos</td>\n",
+       "      <td>Votorantim</td>\n",
+       "      <td>Votorantim/SP</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>2970.0</td>\n",
+       "      <td>2002-11-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Miriam</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>2100</td>\n",
+       "      <td>2310.0</td>\n",
+       "      <td>1999-02-21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Código     Nome      Cidade      Cidade/UF  Salário  Salário+10%  Data_Nasc\n",
+       "0       1    Maria    Sorocaba    Sorocaba/SP     1500       1650.0 1990-01-19\n",
+       "1       2    Pedro  Votorantim  Votorantim/SP     2500       2750.0 2000-02-29\n",
+       "2       3     João     Piedade     Piedade/SP     3000       3300.0 2001-03-07\n",
+       "3       4     José    Sorocaba    Sorocaba/SP     3500       3850.0 1976-04-15\n",
+       "4       5    Bruno     Piedade     Piedade/SP     1300       1430.0 2001-08-29\n",
+       "5       6  Vanessa    Sorocaba    Sorocaba/SP     1900       2090.0 1996-05-11\n",
+       "6       7   Marcos  Votorantim  Votorantim/SP     2700       2970.0 2002-11-24\n",
+       "7       8   Miriam    Sorocaba    Sorocaba/SP     2100       2310.0 1999-02-21"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# alternado o nome de uma coluna\n",
+    "\n",
+    "planilha = planilha.rename(columns={'Cód' : 'Código'})\n",
+    "\n",
+    "display(planilha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Código</th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Cidade/UF</th>\n",
+       "      <th>Salário</th>\n",
+       "      <th>Salário+10%</th>\n",
+       "      <th>Data_Nasc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Maria</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>1980.0</td>\n",
+       "      <td>1990-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>Votorantim</td>\n",
+       "      <td>Votorantim/SP</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>2750.0</td>\n",
+       "      <td>2000-02-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>João</td>\n",
+       "      <td>Piedade</td>\n",
+       "      <td>Piedade/SP</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3300.0</td>\n",
+       "      <td>2001-03-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>José</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>3850.0</td>\n",
+       "      <td>1976-04-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Bruno</td>\n",
+       "      <td>Piedade</td>\n",
+       "      <td>Piedade/SP</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>2001-08-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Vanessa</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>2090.0</td>\n",
+       "      <td>1996-05-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Marcos</td>\n",
+       "      <td>Votorantim</td>\n",
+       "      <td>Votorantim/SP</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>2970.0</td>\n",
+       "      <td>2002-11-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Miriam</td>\n",
+       "      <td>Sorocaba</td>\n",
+       "      <td>Sorocaba/SP</td>\n",
+       "      <td>2100</td>\n",
+       "      <td>2310.0</td>\n",
+       "      <td>1999-02-21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Código     Nome      Cidade      Cidade/UF  Salário  Salário+10%  Data_Nasc\n",
+       "0       1    Maria    Sorocaba    Sorocaba/SP     1800       1980.0 1990-01-19\n",
+       "1       2    Pedro  Votorantim  Votorantim/SP     2500       2750.0 2000-02-29\n",
+       "2       3     João     Piedade     Piedade/SP     3000       3300.0 2001-03-07\n",
+       "3       4     José    Sorocaba    Sorocaba/SP     3500       3850.0 1976-04-15\n",
+       "4       5    Bruno     Piedade     Piedade/SP     1300       1430.0 2001-08-29\n",
+       "5       6  Vanessa    Sorocaba    Sorocaba/SP     1900       2090.0 1996-05-11\n",
+       "6       7   Marcos  Votorantim  Votorantim/SP     2700       2970.0 2002-11-24\n",
+       "7       8   Miriam    Sorocaba    Sorocaba/SP     2100       2310.0 1999-02-21"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#sobrescrevendo ojetos\n",
+    "\n",
+    "planilha.loc[[0], ['Salário']] = 1800\n",
+    "planilha.loc[[0], ['Salário+10%']] = 1800 * 1.1\n",
+    "\n",
+    "\n",
+    "display(planilha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planilha.to_excel('Nova planilha.xlsx', index=False)\n",
+    "planilha.to_csv('Nova planilha.csv', index=False)\n",
+    "planilha.to_html('Nova planilha.html', index=False)\n",
+    "planilha.to_json('Nova planilha.json')"
+   ]
   }
  ],
  "metadata": {
