teste de conexao

--- a/02 - Interpolação/Exercício Interpolação.ipynb
+++ b/02 - Interpolação/Exercício Interpolação.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "nome = input('Digite seu nome')\n",
     "\n",
-    "print(f'Meu nome é {nome}')"
+    "print(f'Olá, meu nome é {nome}')"
    ]
   },
   {
