--- a/01 - Variáveis/Exercício Variáveis.ipynb
+++ b/01 - Variáveis/Exercício Variáveis.ipynb
@@ -20,17 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b91989ff-4097-4641-9077-1878e47130a5",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mA execução de células com '/usr/bin/python3' requer o pacote ipykernel.\n",
+      "\u001b[1;31mExecute o seguinte comando para instalar \"ipykernel\" no ambiente do Python. \n",
+      "\u001b[1;31mComando: \"/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall\""
      ]
     }
    ],
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "52a804b5-32e4-424f-9a8a-a58b61b6651b",
    "metadata": {
     "tags": []
@@ -270,19 +273,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "eb7638b9-e5be-4899-9c22-de84d501c2ba",
    "metadata": {
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Digite sua idade:  37\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -400,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ae15b58c-3505-40ad-a337-29b95d692d61",
    "metadata": {
     "tags": []
@@ -444,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
