--- a/02 - Interpolação/Exercício Interpolação.ipynb
+++ b/02 - Interpolação/Exercício Interpolação.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "dd278c9d-a43d-415c-8e60-ac3e84bd6be4",
    "metadata": {
     "tags": []
@@ -33,14 +33,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Meu nome é \n"
+      "Meu nome é thiago\n"
      ]
     }
    ],
    "source": [
     "nome = input('Digite seu nome')\n",
     "\n",
-    "print(f'Olá, meu nome é {nome}')"
+    "print(f'Meu nome é {nome}')"
    ]
   },
   {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "8e9eb95b-485a-4ed9-b6ce-838e86c97c1d",
    "metadata": {
     "tags": []
@@ -431,7 +431,7 @@
      "text": [
       "\n",
       "\n",
-      " tem  anos!\n"
+      "thiago tem 37 anos!\n"
      ]
     }
    ],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "6f32e32b-58e1-4ec9-9537-e16dad379301",
    "metadata": {
     "tags": []
@@ -473,14 +473,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O valor total da sua compra foi de 129.99\n"
+      "O valor da total arredondado é de 129.99\n"
      ]
     }
    ],
    "source": [
     "compra = 129.9945\n",
     "\n",
-    "print(f'O valor total da sua compra foi de {round(compra,2)}')"
+    "print(f'O valor da total arredondado é de {round(compra,2)}')"
    ]
   },
   {
@@ -633,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
